--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -7,7 +7,7 @@ $footer-height: 125.5px;
 
 body, body.view-profile {
   min-height: initial;
-  background-color: rgb(167, 17, 17);
+  background-color: #ffffff;
 }
 
 %btn-pl-default-base {
