--- a/theme/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/theme/lms/static/sass/partials/lms/theme/_extras.scss
@@ -229,7 +229,7 @@ header.global-header {
     padding: 40px;
     max-width: 100%;
     background: url('#{$static-path}/images/banner.jpg') center center no-repeat ;
-    background-size: contain;
+    background-size: cover;
   };
   .title {
     background: none;
