home course list css

--- a/theme/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/theme/lms/static/sass/partials/lms/theme/_extras.scss
@@ -387,3 +387,6 @@ header.global-header {
   }
 
 }
+.home .courses-container .courses .courses-listing .courses-listing-item{
+  margin-right: 1.3%;
+}
