--- a/theme/lms/templates/footer.html
+++ b/theme/lms/templates/footer.html
@@ -13,27 +13,48 @@
 % if uses_bootstrap:
   <div class="container-fluid wrapper-footer">
     <footer>
-      <!-- <div class="row">
-        <div class="col-md-9">
-          
-          <nav class="navbar site-nav navbar-expand-sm" aria-label="${_('About')}">
-            <ul class="navbar-nav">
+      <div class="colophon">
+        
+        <nav class="nav-colophon" aria-label="${_('About')}">
+          <ol>
               
-                <li class="nav-item">
-                  <a class="nav-link" href="/about">About</a>
-                </li>
+              <li>
+                <a href="/about">${_('About')}</a>
+              </li>
               
-                <li class="nav-item">
-                  <a class="nav-link" href="/contact">Contact</a>
-                </li>
-              
-            </ul>
-          </nav>
-          
+              <li>
+                <a href="/contact">お問い合わせ</a>
+              </li>
 
-          ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
+              <li>
+                <a href="/help">利用までの流れ</a>
+              </li>
+              
+          </ol>
+        </nav>
+        
+        % if context.get('include_language_selector', footer_language_selector_is_enabled()):
+            <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
+        % endif
+
+        <div class="wrapper-logo">
+          <p>
+            <a href="/">
+              ## The default logo is a placeholder.
+              ## You can either replace this link entirely or update
+              ## the FOOTER_ORGANIZATION_IMAGE in Django settings.
+              ## If you customize FOOTER_ORGANIZATION_IMAGE, then the image
+              ## can be included in the footer on other sites
+              ## (e.g. a blog or marketing front-end) to provide a consistent
+              ## user experience.  See the branding app for details.
+              <img alt="${_('organization logo')}" src="${footer['logo_image']}">
+            </a>
+          </p>
+        </div>
+
+        ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
           <p class="copyright">${footer['copyright']}
-               % if icp_license_info.get('icp_license'):
+              % if icp_license_info.get('icp_license'):
                 ${u" | {text}".format(text=icp_license_info.get('text'))}
                 <a href="${icp_license_info.get('icp_license_link', '#')}">
                     ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
@@ -41,43 +62,19 @@
               % endif
           </p>
 
-          
-          <nav class="navbar legal-nav navbar-expand-sm" aria-label="${_('Legal')}">
-            <ul class="navbar-nav">
-              
-                <li class="nav-item">
-                  <a class="nav-link" href="/tos">Terms of service</a>
-                </li>
-              
-                <li class="nav-item">
-                  <a class="nav-link" href="https://github.com/overhangio/indigo">Indigo theme for Open edX</a>
-                </li>
-              
-            </ul>
-          </nav>
-          
-        </div>
-        <div class="col-md-3">
-          ## Please leave this link and use one of the logos provided
-          ## The OpenEdX link may be hidden when this view is served
-          ## through an API to partner sites (such as marketing sites or blogs),
-          ## which are not technically powered by Open edX.
-          % if not hide_openedx_link:
-            <div class="footer-about-openedx">
-              <p>
-                <a href="https://docs.tutor.overhang.io" rel="noopener" target="_blank">
-                  <img src="${static.url('images/tutor-logo.png')}" width="140" />
-                </a>
-                <a href="${footer['openedx_link']['url']}" rel="noopener" target="_blank">
-                  <img src="${static.url('images/openedx-logo.png')}" alt="${footer['openedx_link']['title']}" width="140" />
-                </a>
-              </p>
-            </div>
-          % endif
-        </div>
-      </div> -->
-      <div class="d-flex justify-content-between flex-wrap"><div class="mb-4 mr-5"><h2 class="mb-4 section-title">edX</h2><ul class="list-unstyled p-0 mt-4"><li class="mb-2"><a class="footer-link" href="/about-us">About</a></li><li class="mb-2"><a class="footer-link" href="https://business.edx.org/?utm_campaign=edX.org%20Referral&amp;utm_medium=Footer&amp;utm_source=prospectus.edx.org">edX for Business</a></li><li class="mb-2"><a class="footer-link" href="/affiliate-program">Affiliates</a></li><li class="mb-2"><a class="footer-link" href="http://open.edx.org">Open edX</a></li><li class="mb-2"><a class="footer-link" href="/careers">Careers</a></li><li class="mb-2"><a class="footer-link" href="https://press.edx.org">News</a></li></ul></div><div class="mb-4 mr-5"><h2 class="mb-4 section-title">Connect</h2><ul class="list-unstyled p-0 mt-4"><li class="mb-2"><a class="footer-link" href="https://blog.edx.org">Blog</a></li><li class="mb-2"><a class="footer-link" href="https://courses.edx.org/support/contact_us">Contact Us</a></li><li class="mb-2"><a class="footer-link" href="https://support.edx.org">Help Center</a></li><li class="mb-2"><a class="footer-link" href="/media-kit">Media Kit</a></li><li class="mb-2"><a class="footer-link" href="/donate">Donate</a></li></ul></div><div class="mb-4 flex-grow-1"><h2 class="mb-4 section-title">Legal</h2><ul class="list-unstyled p-0 mt-4"><li class="mb-2"><a class="footer-link" href="/edx-terms-service">Terms of Service &amp; Honor Code</a></li><li class="mb-2"><a class="footer-link" href="/edx-privacy-policy">Privacy Policy</a></li><li class="mb-2"><a class="footer-link" href="/accessibility">Accessibility Policy</a></li><li class="mb-2"><a class="footer-link" href="/trademarks">Trademark Policy</a></li><li class="mb-2"><a class="footer-link" href="/sitemap">Sitemap</a></li></ul></div><div class="i18n d-flex mb-4"><form class="large-column"><label class="section-title mt-0" for="site-footer-language-select">Choose Language</label><div class="d-flex align-items-start mt-3"><select class="form-control mr-2" id="site-footer-language-select"><option selected="" value="en">English</option><option value="es">español</option></select><button id="site-footer-language-submit" class="btn btn-outline-primary" type="submit">Apply</button></div></form></div></div>
-    </footer>
+        
+        <nav>
+          <ul>      
+              <li>
+                <p>© 2021 JUKU ONLINE. All rights reserved.</p>
+              </li>
+              <li>
+                <p>|  サイトメンテナンス<a href="http://www.innox-jp.com/" class="inline-link">株式会社ＩｎｎｏＸ</a></p>
+              </li>
+          </ul>
+        </nav>
+        
+      </div> </footer>
   </div>
 % else:
   <div class="wrapper wrapper-footer">
